--- a/templates/questions/_detailed_question.html
+++ b/templates/questions/_detailed_question.html
@@ -5,7 +5,7 @@
 <div class="bg-white rounded-2" style="padding: 17px 0; margin-bottom: 16px">
   <div style="border-bottom: 1px solid #636364; padding: 0 32px 15px 69px;">
     <header style="margin-bottom: 15px; font-size: 32px; line-height: 24px">{{ question.truncated_en_text }}</header>
-    <span style="margin-bottom: 15px; font-size: 19px; line-height: 18px">{{ question.en_text }}</span>
+    <span style="margin-bottom: 15px; font-size: 19px; line-height: 18px; white-space: pre-wrap; overflow-wrap: break-word; hyphens: auto">{{ question.en_text }}</span>
   </div>
 
   <div class="d-flex align-items-center text-nowrap" style="font-size: 20px; height: 50px; gap: 12px; margin: 0 32px 0 17px;">
