--- a/templates/answers/detail.html
+++ b/templates/answers/detail.html
@@ -12,16 +12,14 @@
 {% block main %}
   {{ block.super }}
 
-  <div class="d-flex flex-column bg-white rounded-2 position-relative" style="padding: 7px 0 20px 17px;">
-    <div class="d-flex {% if answer.question.status != 'closed' %}position-absolute{% endif %}">
+  <div class="d-flex flex-column bg-white rounded-2 position-relative" style="padding: 7px 0 20px 17px; gap: 17px">
+    <div class="d-flex {% if answer.question.status != 'closed' %}position-absolute{% endif %} align-items-center">
       {% include 'answers/_answer.html' %}
     </div>
 
-    <div style="margin-left: 52px">
-      {{ answer.en_text }}
-    </div>
+    <div style="margin-left: 52px; margin-right: 65px; white-space: pre-wrap; overflow-wrap: break-word; hyphens: auto">{{ answer.en_text }}</div>
 
-    <div style="margin: 17px 0 0 52px">
+    <div style="margin-left: 52px">
       {% include 'likes/_for_answer.html' %}
     </div>
   </div>
