--- a/templates/answers/list.html
+++ b/templates/answers/list.html
@@ -17,33 +17,35 @@
     {% include 'questions/_detailed_question.html' %}
   {% endif %}
 
-  <div class="bg-white rounded-2" style="padding: 7px 0;margin-bottom: 3px">
+  <div class="bg-white rounded-2 d-flex flex-column" style="margin-bottom: 3px; padding: 7px 0; gap: 17px">
     {% for answer in object_list %}
-      <div class="d-flex flex-column bg-white rounded-2 position-relative" style="padding: 7px 0 20px 17px;">
+      <div class="d-flex flex-column bg-white rounded-2 position-relative" style="padding: 7px 0 20px 17px; margin-left: 52px; gap: 17px">
 
-        <div class="d-flex {% if question.status != 'closed' %}position-absolute{% endif %}">
+        <div class="d-flex {% if question.status != 'closed' %}position-absolute{% endif %}" style="margin-left: -52px">
           {% include 'answers/_answer.html' %}
         </div>
 
-        <div style="margin-left: 52px">
+        <div>
           {{ answer.truncated_en_text }}
         </div>
 
-        <div style="margin-left: 52px; margin-top: 17px">
+        <div>
           <a class="text-decoration-none" href="{% url 'answers:detail' pk=answer.id question_id=answer.question_id country_id=answer.question.country_id %}">
             {% trans 'Full answer' %}
           </a>
         </div>
 
-        <div style="margin: 17px 0 0 52px">
-          {% include 'likes/_for_answer.html' %}
-        </div>
+        {% include 'likes/_for_answer.html' %}
       </div>
+    {% empty %}
+      <div style="margin-left: 52px">
+        {% trans 'There is no answers yet' %}
+      <div>
     {% endfor %}
 
-    {% if question.author != request.user and question.status == 'published' and question|is_not_answered_by_me:request.user %}
-      <a style="display: inline-block; width: 130px; text-align: center; text-decoration: none; line-height: 34px; color: white; border-radius: 5px; background: #2659C2"
-         href="{% url 'answers:create' question_id=question.id country_id=question.country_id %}"
+    {% if question.author != request.user and question.status == 'published' and question|is_not_answered_by_me:request.user.id %}
+      <a style="display: inline-block; width: 150px; text-align: center; text-decoration: none; line-height: 34px; color: white; border-radius: 5px; background: #2659C2; margin-left: 69px"
+         href="{% url 'answers:create' question_id=1 country_id='uk' %}"
       >
         {% trans 'Add new answer' %}
       </a>
