--- a/templates/chat/list.html
+++ b/templates/chat/list.html
@@ -13,8 +13,8 @@
   <div id="scroll-area" class="overflow-auto" style="max-height: 610px">
     <section class="bg-white rounded-2 d-flex flex-column justify-content-end" style="padding: 30px; line-height: 22px">
       {% for message in object_list %}
-        <div class="rounded-2 position-relative" style="min-height: 75px; width: 50%; padding: 16px; margin-bottom: 35px; {% if message.sender == request.user %}color: #FFFFFF; background: #0069EB; align-self: end;{% else %}color: #817C7D; background: #F4F4F5;{% endif %}">
-          <span>{{ message.content }}</span>
+        <div class="rounded-2 position-relative" style="min-height: 75px; width: 50%; padding: 16px 16px 30px; margin-bottom: 35px; {% if message.sender == request.user %}color: #FFFFFF; background: #0069EB; align-self: end;{% else %}color: #817C7D; background: #F4F4F5;{% endif %}">
+          <span style="white-space: pre-wrap; overflow-wrap: break-word; hyphens: auto">{{ message.content }}</span>
           <div class="position-absolute bottom-0 end-0" style="margin-bottom: 8px; margin-right: 10px">
             {{ message.created|time:'H:i' }}
           </div>
