--- a/templates/questions/_question.html
+++ b/templates/questions/_question.html
@@ -20,7 +20,7 @@
       {% include 'questions/_status.html' %}
     </span>
 
-    {% if question.author != request.user and question.status == 'published' and question|is_not_answered_by_me:request.user %}
+    {% if question.author != request.user and question.status == 'published' and question|is_not_answered_by_me:request.user.id %}
       <a style="font-size: 24px; display: inline-block; width: 130px; text-align: center; text-decoration: none; line-height: 34px; color: white; border-radius: 5px; background: #2659C2"
          href="{% url 'answers:create' country_id=question.country.id question_id=question.id %}"
       >
@@ -51,7 +51,15 @@
 {% include 'questions/_reason.html' %}
 
 {% if question.best_answer %}
-  <div class="d-flex">
+  <div class="d-flex rounded-2 align-items-center bg-white" style="padding: 7px 17px">
     {% include 'answers/_answer.html' with answer=question.best_answer %}
+
+    <div style="margin-left: 19px">
+      {{ question.best_answer.truncated_en_text }}
+    </div>
+
+    <div style="margin-left: auto">
+      {% include 'likes/_for_answer.html' with answer=question.best_answer %}
+    </div>
   </div>
 {% endif %}
