--- a/templates/questions/create.html
+++ b/templates/questions/create.html
@@ -9,7 +9,7 @@
 {% endblock beforemain %}
 {% block main %}
   {{ block.super }}
-  <form method="POST" class="bg-white rounded-2 d-flex flex-column" style="padding: 20px" action="{% url 'questions:create' country_id=request.resolver_match.kwargs.country_id %}">
+  <form method="POST" class="bg-white rounded-2 d-flex flex-column" style="padding: 20px" action="{% url 'questions:create' country_id=current_country.id|default:'unknown' %}">
     {% csrf_token %}
     {{ form|crispy }}
     <input type="submit" style="border: none; padding: 0; width: 245px; text-align: center; line-height: 35px; color: white; border-radius: 5px; background: #2659C2" value="{% trans 'Create Question' %}">
