Use username instead of email to login and fix changing country

--- a/templates/questions/_detailed_question.html
+++ b/templates/questions/_detailed_question.html
@@ -4,7 +4,7 @@
 
 <div class="bg-white rounded-2" style="padding: 17px 0; margin-bottom: 16px">
   <div style="border-bottom: 1px solid #636364; padding: 0 32px 15px 69px;">
-    <header style="margin-bottom: 15px; font-size: 32px; line-height: 24px">{{ question.truncated_en_text }}</header>
+    <header style="margin-bottom: 15px; font-size: 32px; line-height: 24px">{{ question.en_title }}</header>
     <span style="margin-bottom: 15px; font-size: 19px; line-height: 18px; white-space: pre-wrap; overflow-wrap: break-word; hyphens: auto">{{ question.en_text }}</span>
   </div>
 
