--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,7 +12,7 @@
     <form class="login" method="POST" action="{% url 'account_login' %}">
       {% csrf_token %}
       <div style="margin-bottom: 30px">
-        <input aria-label="{{ form.username.label }}" type="text" name="{{ form.username.html_name }}" placeholder="{{ form.username.label }}" autocomplete="username" class="textinput textInput form-control" style="border-radius: 0" required>
+        <input aria-label="{{ form.login.label }}" type="text" name="{{ form.login.html_name }}" placeholder="{{ form.login.label }}" autocomplete="username" class="textinput textInput form-control" style="border-radius: 0" required>
       </div>
       <div style="margin-bottom: 30px">
         <input aria-label="{{ form.password.label }}" type="password" name="{{ form.password.html_name }}" placeholder="{{ form.password.label }}" autocomplete="current-password" class="textinput textInput form-control" style="border-radius: 0" required>
