--- a/templates/questions/_question.html
+++ b/templates/questions/_question.html
@@ -7,7 +7,7 @@
   </a>
 
   <div class="d-flex flex-grow-1 flex-column" style="font-size: 20px">
-    <header style="margin-bottom: 15px; font-size: 32px; line-height: 24px">{{ question.truncated_en_text }}</header>
+    <header style="margin-bottom: 15px; font-size: 32px; line-height: 24px">{{ question.en_title }}</header>
     <span style="margin-bottom: 28px; font-size: 19px; line-height: 18px">{{ question.truncated_en_text }}</span>
 
     <div class="d-flex align-items-center text-nowrap" style="gap: 12px">
