--- a/templates/questions/edit.html
+++ b/templates/questions/edit.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans 'Edit question' %}{% endblock title %}
 {% block beforemain %}
   {{ block.super }}
-  {% include '_countries.html' with url_name='questions:index' %}
+  {% include '_countries.html' with url_name='questions:my' %}
 {% endblock beforemain %}
 {% block main %}
   {{ block.super }}
