--- a/templates/claims/create.html
+++ b/templates/claims/create.html
@@ -4,6 +4,7 @@
 
 {% block title %}{% trans 'Create claim' %}{% endblock title %}
 {% block beforemain %}
+  {{ block.super }}
   {% include '_back_button.html' %}
 {% endblock beforemain %}
 
