--- a/templates/rules/list.html
+++ b/templates/rules/list.html
@@ -3,6 +3,7 @@
 
 {% block title %}{% trans 'Rules' %}{% endblock title %}
 {% block beforemain %}
+  {{ block.super }}
   {% include '_back_button.html' %}
 {% endblock beforemain %}
 {% block main %}
