Fixes, fixes, fixes...

--- a/templates/questions/_status.html
+++ b/templates/questions/_status.html
@@ -1,5 +1,6 @@
 {% if question.status in 'approved published answered'|split %}
   {{ question.status_changed|timesince }}
+{% elif question.status == 'closed' %}
 {% else %}
   {{ question.get_status_display }}
 {% endif %}
