--- a/templates/users/_avatar.html
+++ b/templates/users/_avatar.html
@@ -1,6 +1,8 @@
 {% load i18n %}
 {% if user.avatar %}
-  <img class="rounded-circle" height="33" width="33" alt="{% trans 'Avatar' %}" src="{{ user.avatar.url }}" />
+  <div class="rounded-circle" style="widht: 33px; height: 33px">
+    <img style="max-width: 100%; max-height: 100%" alt="{% trans 'Avatar' %}" src="{{ user.avatar.url }}" />
+  </div>
 {% else %}
   <i class="bi bi-person-circle" style="font-size: 33px; line-height: 33px"></i>
 {% endif %}
